// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Direction tests Snapshot test with params 1`] = `
<Form
  inline={false}
>
  <FormGroup
    controlId="formRoute"
  >
    <FormLabel
      column={false}
      srOnly={false}
    >
      Route:
    </FormLabel>
    <FormControl
      as="select"
      onChange={[Function]}
      value="123"
    >
      <option
        value=""
      >
        Select a route
      </option>
      <option
        key="901"
        value="901"
      >
        901
         - 
        METRO Blue Line
      </option>
      <option
        key="902"
        value="902"
      >
        902
         - 
        METRO Green Line
      </option>
      <option
        key="903"
        value="903"
      >
        903
         - 
        METRO Red Line
      </option>
      <option
        key="921"
        value="921"
      >
        921
         - 
        METRO A Line
      </option>
      <option
        key="923"
        value="923"
      >
        923
         - 
        METRO C Line
      </option>
      <option
        key="992"
        value="992"
      >
        992
         - 
        METRO Green Line Bus
      </option>
      <option
        key="888"
        value="888"
      >
        888
         - 
        Northstar Commuter Rail
      </option>
      <option
        key="2"
        value="2"
      >
        2
         - 
        Franklin Av - Riverside Av - U of M - 8th St SE
      </option>
      <option
        key="3"
        value="3"
      >
        3
         - 
        U of M - Como Av - Energy Park Dr - Maryland Av
      </option>
      <option
        key="4"
        value="4"
      >
        4
         - 
        New Brighton - Johnson St - Bryant Av - Southtown
      </option>
      <option
        key="5"
        value="5"
      >
        5
         - 
        Brooklyn Ctr - Fremont - 26th Av - Chicago - MOA
      </option>
      <option
        key="6"
        value="6"
      >
        6
         - 
        U of M - Hennepin - Xerxes - France - Southdale
      </option>
      <option
        key="7"
        value="7"
      >
        7
         - 
        Plymouth - 27 Av - Minnehaha - 46 St Sta - 34 Av S
      </option>
      <option
        key="9"
        value="9"
      >
        9
         - 
        Glenwood - Wayzata Blvd - Cedar Lk Rd - 46 St Sta
      </option>
      <option
        key="10"
        value="10"
      >
        10
         - 
        Central Av - University Av - Northtown
      </option>
      <option
        key="11"
        value="11"
      >
        11
         - 
        Columbia Heights - 2nd St NE - 4th Av S
      </option>
      <option
        key="12"
        value="12"
      >
        12
         - 
        Uptown - Excelsior Blvd - Hopkins - Opus
      </option>
      <option
        key="14"
        value="14"
      >
        14
         - 
        Robbinsdale - West Broadway - Bloomington Av
      </option>
      <option
        key="16"
        value="16"
      >
        16
         - 
        University Av - Midway
      </option>
      <option
        key="17"
        value="17"
      >
        17
         - 
        Minnetonka Blvd - Uptown - Washington St NE
      </option>
      <option
        key="18"
        value="18"
      >
        18
         - 
        Nicollet Av -Grand Av - South Bloomington
      </option>
      <option
        key="19"
        value="19"
      >
        19
         - 
        Olson Memorial Hwy - Penn Av N - Brooklyn Center
      </option>
      <option
        key="21"
        value="21"
      >
        21
         - 
        Uptown - Lake St - Midway - Selby Av
      </option>
      <option
        key="22"
        value="22"
      >
        22
         - 
        Brooklyn Ctr - Lyndale Av N - Cedar - 28 Av S - VA
      </option>
      <option
        key="23"
        value="23"
      >
        23
         - 
        Uptown - 38th St - Highland Village
      </option>
      <option
        key="25"
        value="25"
      >
        25
         - 
        Northtown - Silver Lake - Stinson - Lake of Isles
      </option>
      <option
        key="27"
        value="27"
      >
        27
         - 
        Lake St Sta - 26th St - 28St
      </option>
      <option
        key="30"
        value="30"
      >
        30
         - 
        Broadway Crosstown - Westgate Sta
      </option>
      <option
        key="32"
        value="32"
      >
        32
         - 
        Robbinsdale - Lowry Av - Rosedale
      </option>
      <option
        key="39"
        value="39"
      >
        39
         - 
        Wells Fargo - Abbott NW and Children's Hospitals
      </option>
      <option
        key="46"
        value="46"
      >
        46
         - 
        50St - 46St - 46St Sta - Highland Village
      </option>
      <option
        key="53"
        value="53"
      >
        53
         - 
        Ltd Stop - Uptown - Lake St - Marshall Av
      </option>
      <option
        key="54"
        value="54"
      >
        54
         - 
        Ltd Stop - W 7 St - Airport - MOA - Maplewood Mall
      </option>
      <option
        key="59"
        value="59"
      >
        59
         - 
        Ltd Stop - Blaine - Hwy 65 - Central Av - Mpls
      </option>
      <option
        key="61"
        value="61"
      >
        61
         - 
        E Hennepin Av - Larpenteur Av - Arcade St
      </option>
      <option
        key="62"
        value="62"
      >
        62
         - 
        Shoreview - Little Canada - Rice St Signal Hills
      </option>
      <option
        key="63"
        value="63"
      >
        63
         - 
        Raymond Sta - Grand Av - Sunray - McKnight Rd
      </option>
      <option
        key="64"
        value="64"
      >
        64
         - 
        Payne - Maryland - White Bear Av - Maplewood Mall
      </option>
      <option
        key="65"
        value="65"
      >
        65
         - 
        Dale St - Co Rd B - Rosedale
      </option>
      <option
        key="67"
        value="67"
      >
        67
         - 
        W Minnehaha Av - Raymond Sta - Franklin Av
      </option>
      <option
        key="68"
        value="68"
      >
        68
         - 
        Jackson St - Robert St - W St Paul - Inver Hills
      </option>
      <option
        key="70"
        value="70"
      >
        70
         - 
        St Clair Av - W 7th St - Burns Av - Sunray
      </option>
      <option
        key="71"
        value="71"
      >
        71
         - 
        Little Canada - Westminster- Concord - Inver Hills
      </option>
      <option
        key="74"
        value="74"
      >
        74
         - 
        46th St - Randolph - W 7th St - E 7th St - Sunray
      </option>
      <option
        key="75"
        value="75"
      >
        75
         - 
        Stryker - Robert - Mendota Hts - Lake Cove Apts
      </option>
      <option
        key="80"
        value="80"
      >
        80
         - 
        Maplewood - White Bear Av - Sunray
      </option>
      <option
        key="83"
        value="83"
      >
        83
         - 
        HarMar Target - Lexington Av
      </option>
      <option
        key="84"
        value="84"
      >
        84
         - 
        Snelling - Highland Village - Sibley Plaza
      </option>
      <option
        key="87"
        value="87"
      >
        87
         - 
        Rosedale - U of M St Paul - Cleveland - Highland
      </option>
      <option
        key="94"
        value="94"
      >
        94
         - 
        Express - Mpls - St Paul
      </option>
      <option
        key="111"
        value="111"
      >
        111
         - 
        Ltd Stop - 66th St - Chicago - Cedar - U of M
      </option>
      <option
        key="113"
        value="113"
      >
        113
         - 
        Ltd Stop - Grand Av S - Lyndale Av S - U of M
      </option>
      <option
        key="114"
        value="114"
      >
        114
         - 
        Ltd Stop - Excelsior Blvd - Uptown - U of M
      </option>
      <option
        key="115"
        value="115"
      >
        115
         - 
        Ltd Stop - Grand Av S - Uptown - Hennepin - U of M
      </option>
      <option
        key="118"
        value="118"
      >
        118
         - 
        Ltd Stop - Central Av - Lowry Av - U of M
      </option>
      <option
        key="120"
        value="120"
      >
        120
         - 
        U of M - East Bank Circulator
      </option>
      <option
        key="121"
        value="121"
      >
        121
         - 
        U of M - Campus Connector
      </option>
      <option
        key="122"
        value="122"
      >
        122
         - 
        U of M - University Ave Circulator
      </option>
      <option
        key="123"
        value="123"
      >
        123
         - 
        U of M - 4th Street Circulator
      </option>
      <option
        key="124"
        value="124"
      >
        124
         - 
        U of M - Saint Paul Circulator
      </option>
      <option
        key="129"
        value="129"
      >
        129
         - 
        U of M - Huron Shuttle
      </option>
      <option
        key="133"
        value="133"
      >
        133
         - 
        Ltd Stop - Bloomington Av - Chicago Av - Mpls
      </option>
      <option
        key="134"
        value="134"
      >
        134
         - 
        Ltd Stop - Highland - Cleveland - Cretin - Mpls
      </option>
      <option
        key="135"
        value="135"
      >
        135
         - 
        Ltd Stop - Grand Av S - Mpls
      </option>
      <option
        key="141"
        value="141"
      >
        141
         - 
        Ltd Stop - New Brighton - Johnson St - Mpls
      </option>
      <option
        key="146"
        value="146"
      >
        146
         - 
        Ltd Stop - Vernon Av - 50th St - Mpls
      </option>
      <option
        key="156"
        value="156"
      >
        156
         - 
        Express - 58th St - 56th St - Diamond Lake - Mpls
      </option>
      <option
        key="219"
        value="219"
      >
        219
         - 
        Maplewood - Century Av - Hadley Av - Sunray
      </option>
      <option
        key="223"
        value="223"
      >
        223
         - 
        Rosedale - Little Canada - Maplewood
      </option>
      <option
        key="225"
        value="225"
      >
        225
         - 
        Deluxe - Roseville - Coventry - Rosedale
      </option>
      <option
        key="227"
        value="227"
      >
        227
         - 
        Target Shoreview - Victoria - Rosedale
      </option>
      <option
        key="250"
        value="250"
      >
        250
         - 
        Express - St Josephs P&amp;R - 95th Av P&amp;R - Mpls
      </option>
      <option
        key="252"
        value="252"
      >
        252
         - 
        Express - 95Av P&amp;R - U of M
      </option>
      <option
        key="261"
        value="261"
      >
        261
         - 
        Express - Shoreview - Roseville - Mpls
      </option>
      <option
        key="262"
        value="262"
      >
        262
         - 
        Ltd Stop - 95Av P&amp;R - Shoreview Rice - St Paul
      </option>
      <option
        key="263"
        value="263"
      >
        263
         - 
        Express - Hwy 36 Rice P&amp;R - Hwy 61 - Co Rd C -Mpls
      </option>
      <option
        key="264"
        value="264"
      >
        264
         - 
        Express - Roseville - Co Rd C P &amp; R - Mpls
      </option>
      <option
        key="265"
        value="265"
      >
        265
         - 
        Express - White Bear Lake - Maplewood - St Paul
      </option>
      <option
        key="270"
        value="270"
      >
        270
         - 
        Express - Mahtomedi - Maplewood - Minneapolis
      </option>
      <option
        key="272"
        value="272"
      >
        272
         - 
        Express - Maplewood - Roseville - U of M
      </option>
      <option
        key="275"
        value="275"
      >
        275
         - 
        Express - Forest Lake - Co Rd 14 P&amp;R - St Paul
      </option>
      <option
        key="288"
        value="288"
      >
        288
         - 
        Express - Forest Lake - Mpls
      </option>
      <option
        key="294"
        value="294"
      >
        294
         - 
        Express - Oakdale - Stillwater - St Paul
      </option>
      <option
        key="350"
        value="350"
      >
        350
         - 
        Ltd Stop - Sunray - McKnight - St Paul
      </option>
      <option
        key="351"
        value="351"
      >
        351
         - 
        Express - Woodbury - St Paul
      </option>
      <option
        key="353"
        value="353"
      >
        353
         - 
        Express - Woodbury - St Paul - Mpls
      </option>
      <option
        key="355"
        value="355"
      >
        355
         - 
        Express - Woodbury - Mpls
      </option>
      <option
        key="361"
        value="361"
      >
        361
         - 
        Express - Cottage Grove - St Paul
      </option>
      <option
        key="364"
        value="364"
      >
        364
         - 
        Express - Newport - Cottage Grove - St Paul
      </option>
      <option
        key="365"
        value="365"
      >
        365
         - 
        Express - Cottage Grove - Newport - Mpls
      </option>
      <option
        key="375"
        value="375"
      >
        375
         - 
        Express - Oakdale - Mpls
      </option>
      <option
        key="411"
        value="411"
      >
        411
         - 
        Mystic Lake-Marschall Rd Transit Sta
      </option>
      <option
        key="415"
        value="415"
      >
        415
         - 
        MOA - Mendota Heights - Eagan
      </option>
      <option
        key="417"
        value="417"
      >
        417
         - 
        Mendota Heights - St Paul
      </option>
      <option
        key="420"
        value="420"
      >
        420
         - 
        Rosemount - Apple Valley Flex
      </option>
      <option
        key="421"
        value="421"
      >
        421
         - 
        Burnsville - Savage Flex
      </option>
      <option
        key="426"
        value="426"
      >
        426
         - 
        Burnsville Shuttle
      </option>
      <option
        key="436"
        value="436"
      >
        436
         - 
        Eagan - Hwy 55 - Reverse Commuter
      </option>
      <option
        key="438"
        value="438"
      >
        438
         - 
        Eagan - Cliff Lake Flex
      </option>
      <option
        key="440"
        value="440"
      >
        440
         - 
        Apple Valley - Cedar Grove Transit Sta - VA Hosp
      </option>
      <option
        key="442"
        value="442"
      >
        442
         - 
        Burnsville Center - Apple Valley
      </option>
      <option
        key="444"
        value="444"
      >
        444
         - 
        Savage - Burnsville - Mall of America
      </option>
      <option
        key="445"
        value="445"
      >
        445
         - 
        Eagan - Cedar Grove Transit Sta
      </option>
      <option
        key="446"
        value="446"
      >
        446
         - 
        Eagan-46th St Sta
      </option>
      <option
        key="452"
        value="452"
      >
        452
         - 
        Express -Mendota Heights - West St Paul - Mpls
      </option>
      <option
        key="460"
        value="460"
      >
        460
         - 
        Express - Burnsville - Mpls
      </option>
      <option
        key="464"
        value="464"
      >
        464
         - 
        Express - Savage - Burnsville - Mpls
      </option>
      <option
        key="465"
        value="465"
      >
        465
         - 
        Express - Burnsville - Mpls - U of M
      </option>
      <option
        key="467"
        value="467"
      >
        467
         - 
        Express - Lakeville - Mpls
      </option>
      <option
        key="470"
        value="470"
      >
        470
         - 
        Express - Eagan - Mpls
      </option>
      <option
        key="472"
        value="472"
      >
        472
         - 
        Express - Eagan - Blackhawk P&amp;R - Mpls
      </option>
      <option
        key="475"
        value="475"
      >
        475
         - 
        Express - Apple Valley - Eagan - Mpls - U of M
      </option>
      <option
        key="476"
        value="476"
      >
        476
         - 
        Express - Palomino Hills P&amp;R - Mpls
      </option>
      <option
        key="477"
        value="477"
      >
        477
         - 
        Express - Lakeville - Apple Valley - Mpls
      </option>
      <option
        key="478"
        value="478"
      >
        478
         - 
        Express - Rosemount - Mpls
      </option>
      <option
        key="479"
        value="479"
      >
        479
         - 
        Express - 157th St Sta - Mpls
      </option>
      <option
        key="480"
        value="480"
      >
        480
         - 
        Express - Apple Valley - Burnsville - St Paul
      </option>
      <option
        key="484"
        value="484"
      >
        484
         - 
        Express - Rosemount - Eagan - St Paul
      </option>
      <option
        key="489"
        value="489"
      >
        489
         - 
        Express - St Paul - Eagan - Reverse Commuter
      </option>
      <option
        key="490"
        value="490"
      >
        490
         - 
        Express - Prior Lake - Shakopee - Mpls
      </option>
      <option
        key="491"
        value="491"
      >
        491
         - 
        Express - Shakopee - Mpls - Reverse Commuter
      </option>
      <option
        key="492"
        value="492"
      >
        492
         - 
        Express - Prior Lake -Mpls - Reverse Commuter
      </option>
      <option
        key="493"
        value="493"
      >
        493
         - 
        Express - Shakopee - Mpls
      </option>
      <option
        key="495"
        value="495"
      >
        495
         - 
        Shakopee - Mall of America
      </option>
      <option
        key="497"
        value="497"
      >
        497
         - 
        Shakopee - Marschall Rd Transit Sta
      </option>
      <option
        key="498"
        value="498"
      >
        498
         - 
        Marschall Rd - Golden Triangle - UnitedHealthcare
      </option>
      <option
        key="499"
        value="499"
      >
        499
         - 
        Shakopee - Southbridge Crossings P&amp;R
      </option>
      <option
        key="515"
        value="515"
      >
        515
         - 
        Southdale - 66th St - Bloomington Av - VA - MOA
      </option>
      <option
        key="535"
        value="535"
      >
        535
         - 
        Ltd Stop - South Bloomington - Richfield - Mpls
      </option>
      <option
        key="537"
        value="537"
      >
        537
         - 
        Valley West - Normandale Col - France - Southdale
      </option>
      <option
        key="538"
        value="538"
      >
        538
         - 
        Southdale - York Av - Southtown - 86th St - MOA
      </option>
      <option
        key="539"
        value="539"
      >
        539
         - 
        Southtown - Normandale -Valley West - 98th - MOA
      </option>
      <option
        key="540"
        value="540"
      >
        540
         - 
        Edina - Richfield - 77th St - MOA
      </option>
      <option
        key="542"
        value="542"
      >
        542
         - 
        84th St - 76th St - American Blvd - MOA
      </option>
      <option
        key="552"
        value="552"
      >
        552
         - 
        Express - 12th Av - Bloomington Av - Mpls
      </option>
      <option
        key="553"
        value="553"
      >
        553
         - 
        Express - Bloomington - Portland Av - Mpls
      </option>
      <option
        key="554"
        value="554"
      >
        554
         - 
        Express - Bloomington - Nicollet Av - Mpls
      </option>
      <option
        key="558"
        value="558"
      >
        558
         - 
        Express - Lyndale Av - Penn Av - 66th St - Mpls
      </option>
      <option
        key="578"
        value="578"
      >
        578
         - 
        Express - Edina - Southdale - Mpls
      </option>
      <option
        key="579"
        value="579"
      >
        579
         - 
        Express - Southdale - U of M
      </option>
      <option
        key="587"
        value="587"
      >
        587
         - 
        Express - Edina - Valley View -Vernon - Mpls
      </option>
      <option
        key="588"
        value="588"
      >
        588
         - 
        Express - Normandale Lake Offices - Mpls
      </option>
      <option
        key="589"
        value="589"
      >
        589
         - 
        Express - West Bloomington - Mpls
      </option>
      <option
        key="597"
        value="597"
      >
        597
         - 
        Express - West Bloomington - Mpls
      </option>
      <option
        key="600"
        value="600"
      >
        600
         - 
        SW Transit - Flex Route
      </option>
      <option
        key="602"
        value="602"
      >
        602
         - 
        SW Transit - Flex Route
      </option>
      <option
        key="604"
        value="604"
      >
        604
         - 
        Louisiana Av - Excelsior Blvd
      </option>
      <option
        key="612"
        value="612"
      >
        612
         - 
        Uptown - Excelsior Blvd-Hopkins - Hopkins - Opus
      </option>
      <option
        key="615"
        value="615"
      >
        615
         - 
        Ridgedale - Co Rd 73 - St Louis Park
      </option>
      <option
        key="643"
        value="643"
      >
        643
         - 
        Ltd Stop - Golden Hills Dr - Cedar Lake Rd - Mpls
      </option>
      <option
        key="645"
        value="645"
      >
        645
         - 
        Ltd Stop - Mound - Wayzata - Ridgedale - Mpls
      </option>
      <option
        key="652"
        value="652"
      >
        652
         - 
        Express - Plymouth Rd - Co Rd 73 P&amp;R - U of M
      </option>
      <option
        key="663"
        value="663"
      >
        663
         - 
        Express - Cedar Lake Rd - Mpls
      </option>
      <option
        key="664"
        value="664"
      >
        664
         - 
        Express - Hopkins - Excelsior Blvd - Mpls
      </option>
      <option
        key="667"
        value="667"
      >
        667
         - 
        Express - Minnetonka - St Louis Park - Mpls
      </option>
      <option
        key="668"
        value="668"
      >
        668
         - 
        Express - Hopkins - St Louis Park - Mpls
      </option>
      <option
        key="670"
        value="670"
      >
        670
         - 
        Express - Excelsior - Mpls
      </option>
      <option
        key="671"
        value="671"
      >
        671
         - 
        Express - Excelsior - Deephaven - Mpls
      </option>
      <option
        key="672"
        value="672"
      >
        672
         - 
        Express - Wayzata - Minnetonka - Mpls
      </option>
      <option
        key="673"
        value="673"
      >
        673
         - 
        Express - Co Rd 73 P&amp;R - Mpls
      </option>
      <option
        key="674"
        value="674"
      >
        674
         - 
        Express - Maple Plain -Orono - Wayzata - Mpls
      </option>
      <option
        key="677"
        value="677"
      >
        677
         - 
        Express- Mound - Orono - Plymouth Rd - Mpls
      </option>
      <option
        key="679"
        value="679"
      >
        679
         - 
        Express - Co Rd 73 - Mpls
      </option>
      <option
        key="690"
        value="690"
      >
        690
         - 
        SW Transit - Express - Eden Prairie - Mpls
      </option>
      <option
        key="695"
        value="695"
      >
        695
         - 
        SW Transit - Express - Chaska - Chanhassen - Mpls
      </option>
      <option
        key="697"
        value="697"
      >
        697
         - 
        SW Transit - Express - Carver - Chaska - Mpls
      </option>
      <option
        key="698"
        value="698"
      >
        698
         - 
        SW Transit - Express - Chaska - Chanhassen - Mpls
      </option>
      <option
        key="699"
        value="699"
      >
        699
         - 
        SW Transit - Express - Chanhassen - Mpls
      </option>
      <option
        key="705"
        value="705"
      >
        705
         - 
        Starlite - Winnetka Av - Louisiana Av Transit Ctr
      </option>
      <option
        key="716"
        value="716"
      >
        716
         - 
        Zane Av - 63rd Av - Crystal - Robbinsdale
      </option>
      <option
        key="717"
        value="717"
      >
        717
         - 
        Brooklyn Center - Robbinsdale - Plymouth
      </option>
      <option
        key="721"
        value="721"
      >
        721
         - 
        Ltd Stop - Brooklyn Center - Target Campus - Mpls
      </option>
      <option
        key="722"
        value="722"
      >
        722
         - 
        Brooklyn Ctr - Humboldt - Shingle Creek
      </option>
      <option
        key="723"
        value="723"
      >
        723
         - 
        Starlite - N Henn Comm College - Brooklyn Ctr
      </option>
      <option
        key="724"
        value="724"
      >
        724
         - 
        Ltd Stop - Target Campus - Starlite - Brooklyn Ctr
      </option>
      <option
        key="740"
        value="740"
      >
        740
         - 
        Plymouth - Fernbrook Ln - Xenium Ln
      </option>
      <option
        key="741"
        value="741"
      >
        741
         - 
        Plymouth - Annapolis - Campus Dr - Station 73
      </option>
      <option
        key="742"
        value="742"
      >
        742
         - 
        Plymouth - Express - Bass Lake Rd
      </option>
      <option
        key="747"
        value="747"
      >
        747
         - 
        Plymouth - Express - Station 73 - Mpls
      </option>
      <option
        key="755"
        value="755"
      >
        755
         - 
        Ltd Stop - Hwy 55 - Golden Valley Rd - Winnetka Av
      </option>
      <option
        key="756"
        value="756"
      >
        756
         - 
        Express- Hwy 55 - Mendelssohn Rd - Boone - Mpls
      </option>
      <option
        key="758"
        value="758"
      >
        758
         - 
        Express - Douglas - MnDot P&amp;R - Noble - Mpls
      </option>
      <option
        key="760"
        value="760"
      >
        760
         - 
        Express - Zane Av - 63rd Av - 65th Av P&amp;R - Mpls
      </option>
      <option
        key="761"
        value="761"
      >
        761
         - 
        Express - Brooklyn Park - Xerxes - 49th Av - Mpls
      </option>
      <option
        key="762"
        value="762"
      >
        762
         - 
        Ltd Stop - Brooklyn Ctr - Humboldt Av - Mpls
      </option>
      <option
        key="763"
        value="763"
      >
        763
         - 
        Express - 85th Av - Brookdale Dr - Humboldt - Mpls
      </option>
      <option
        key="764"
        value="764"
      >
        764
         - 
        Express - Winnetka Av - 42nd Av - Mpls
      </option>
      <option
        key="765"
        value="765"
      >
        765
         - 
        Express - Target - Hwy 252 and 73rd Av P&amp;R - Mpls
      </option>
      <option
        key="766"
        value="766"
      >
        766
         - 
        Express - Anoka - Champlin - W River Rd - Mpls
      </option>
      <option
        key="767"
        value="767"
      >
        767
         - 
        Express - 63rd Av P&amp;R - 65th Av P&amp;R - Mpls
      </option>
      <option
        key="768"
        value="768"
      >
        768
         - 
        Express - Noble P&amp;R - Mpls
      </option>
      <option
        key="771"
        value="771"
      >
        771
         - 
        Plymouth - Shuttle - SW Plymouth - Station 73
      </option>
      <option
        key="772"
        value="772"
      >
        772
         - 
        Plymouth - Express - Station 73
      </option>
      <option
        key="774"
        value="774"
      >
        774
         - 
        Plymouth - Express - Station 73
      </option>
      <option
        key="776"
        value="776"
      >
        776
         - 
        Plymouth - Express - Southwest Plymouth
      </option>
      <option
        key="777"
        value="777"
      >
        777
         - 
        Plymouth - Express - NW Plymouth - Station 73
      </option>
      <option
        key="780"
        value="780"
      >
        780
         - 
        Maple Grove - Express - Shepherd of the Grove P&amp;R
      </option>
      <option
        key="781"
        value="781"
      >
        781
         - 
        Maple Grove - Express - Maple Grove Station
      </option>
      <option
        key="782"
        value="782"
      >
        782
         - 
        Maple Grove - Express - Zachary and 96th Av P&amp;R
      </option>
      <option
        key="783"
        value="783"
      >
        783
         - 
        Maple Grove - Express - Crosswinds Church P&amp;R
      </option>
      <option
        key="785"
        value="785"
      >
        785
         - 
        Maple Grove - Express - Parkway Station
      </option>
      <option
        key="787"
        value="787"
      >
        787
         - 
        Maple Grove - Midday Shuttle - Flex Route
      </option>
      <option
        key="788"
        value="788"
      >
        788
         - 
        Maple Grove - Bass Lake Rd - Crosswinds Church P&amp;R
      </option>
      <option
        key="789"
        value="789"
      >
        789
         - 
        Maple Grove - Express - Maple Grove Sta - U of M
      </option>
      <option
        key="790"
        value="790"
      >
        790
         - 
        Plymouth - Express - Cub Foods - Four Seasons
      </option>
      <option
        key="791"
        value="791"
      >
        791
         - 
        Plymouth - Shuttle - Larch Ln - Four Seasons
      </option>
      <option
        key="793"
        value="793"
      >
        793
         - 
        Plymouth - Express - Cub Foods - Four Seasons
      </option>
      <option
        key="795"
        value="795"
      >
        795
         - 
        Plymouth - Express - Midday - Northeast Plymouth
      </option>
      <option
        key="801"
        value="801"
      >
        801
         - 
        Brooklyn Ctr - Columbia Heights - Rosedale
      </option>
      <option
        key="805"
        value="805"
      >
        805
         - 
        Anoka Traveler - Anoka - Coon Rapids - Northtown
      </option>
      <option
        key="824"
        value="824"
      >
        824
         - 
        Ltd Stop - Northtown - Monroe - University - Mpls
      </option>
      <option
        key="825"
        value="825"
      >
        825
         - 
        Ltd Stop - Northtown - St. Anthony - Mpls
      </option>
      <option
        key="831"
        value="831"
      >
        831
         - 
        Anoka Traveler - 117th Av - Polk - Northtown
      </option>
      <option
        key="850"
        value="850"
      >
        850
         - 
        Express - Riverdale P&amp;R - Foley P&amp;R - Mpls
      </option>
      <option
        key="852"
        value="852"
      >
        852
         - 
        Express - Anoka - Coon Rapids - Northtown - Mpls
      </option>
      <option
        key="854"
        value="854"
      >
        854
         - 
        Express - Paul Pkwy - Northdale - Northtown - Mpls
      </option>
      <option
        key="860"
        value="860"
      >
        860
         - 
        Express - Coon Rapids - Northtown - St Paul
      </option>
      <option
        key="865"
        value="865"
      >
        865
         - 
        Express - Paul Pkwy P&amp;R - Blaine - Mpls
      </option>
      <option
        key="887"
        value="887"
      >
        887
         - 
        Northstar Link - St Cloud Link
      </option>
    </FormControl>
  </FormGroup>
</Form>
`;

exports[`Select Direction tests Snapshot test without params 1`] = `
<Form
  inline={false}
>
  <FormGroup
    controlId="formRoute"
  >
    <FormLabel
      column={false}
      srOnly={false}
    >
      Route:
    </FormLabel>
    <FormControl
      as="select"
      onChange={[Function]}
      value={-1}
    >
      <option
        value=""
      >
        Select a route
      </option>
      <option
        key="901"
        value="901"
      >
        901
         - 
        METRO Blue Line
      </option>
      <option
        key="902"
        value="902"
      >
        902
         - 
        METRO Green Line
      </option>
      <option
        key="903"
        value="903"
      >
        903
         - 
        METRO Red Line
      </option>
      <option
        key="921"
        value="921"
      >
        921
         - 
        METRO A Line
      </option>
      <option
        key="923"
        value="923"
      >
        923
         - 
        METRO C Line
      </option>
      <option
        key="992"
        value="992"
      >
        992
         - 
        METRO Green Line Bus
      </option>
      <option
        key="888"
        value="888"
      >
        888
         - 
        Northstar Commuter Rail
      </option>
      <option
        key="2"
        value="2"
      >
        2
         - 
        Franklin Av - Riverside Av - U of M - 8th St SE
      </option>
      <option
        key="3"
        value="3"
      >
        3
         - 
        U of M - Como Av - Energy Park Dr - Maryland Av
      </option>
      <option
        key="4"
        value="4"
      >
        4
         - 
        New Brighton - Johnson St - Bryant Av - Southtown
      </option>
      <option
        key="5"
        value="5"
      >
        5
         - 
        Brooklyn Ctr - Fremont - 26th Av - Chicago - MOA
      </option>
      <option
        key="6"
        value="6"
      >
        6
         - 
        U of M - Hennepin - Xerxes - France - Southdale
      </option>
      <option
        key="7"
        value="7"
      >
        7
         - 
        Plymouth - 27 Av - Minnehaha - 46 St Sta - 34 Av S
      </option>
      <option
        key="9"
        value="9"
      >
        9
         - 
        Glenwood - Wayzata Blvd - Cedar Lk Rd - 46 St Sta
      </option>
      <option
        key="10"
        value="10"
      >
        10
         - 
        Central Av - University Av - Northtown
      </option>
      <option
        key="11"
        value="11"
      >
        11
         - 
        Columbia Heights - 2nd St NE - 4th Av S
      </option>
      <option
        key="12"
        value="12"
      >
        12
         - 
        Uptown - Excelsior Blvd - Hopkins - Opus
      </option>
      <option
        key="14"
        value="14"
      >
        14
         - 
        Robbinsdale - West Broadway - Bloomington Av
      </option>
      <option
        key="16"
        value="16"
      >
        16
         - 
        University Av - Midway
      </option>
      <option
        key="17"
        value="17"
      >
        17
         - 
        Minnetonka Blvd - Uptown - Washington St NE
      </option>
      <option
        key="18"
        value="18"
      >
        18
         - 
        Nicollet Av -Grand Av - South Bloomington
      </option>
      <option
        key="19"
        value="19"
      >
        19
         - 
        Olson Memorial Hwy - Penn Av N - Brooklyn Center
      </option>
      <option
        key="21"
        value="21"
      >
        21
         - 
        Uptown - Lake St - Midway - Selby Av
      </option>
      <option
        key="22"
        value="22"
      >
        22
         - 
        Brooklyn Ctr - Lyndale Av N - Cedar - 28 Av S - VA
      </option>
      <option
        key="23"
        value="23"
      >
        23
         - 
        Uptown - 38th St - Highland Village
      </option>
      <option
        key="25"
        value="25"
      >
        25
         - 
        Northtown - Silver Lake - Stinson - Lake of Isles
      </option>
      <option
        key="27"
        value="27"
      >
        27
         - 
        Lake St Sta - 26th St - 28St
      </option>
      <option
        key="30"
        value="30"
      >
        30
         - 
        Broadway Crosstown - Westgate Sta
      </option>
      <option
        key="32"
        value="32"
      >
        32
         - 
        Robbinsdale - Lowry Av - Rosedale
      </option>
      <option
        key="39"
        value="39"
      >
        39
         - 
        Wells Fargo - Abbott NW and Children's Hospitals
      </option>
      <option
        key="46"
        value="46"
      >
        46
         - 
        50St - 46St - 46St Sta - Highland Village
      </option>
      <option
        key="53"
        value="53"
      >
        53
         - 
        Ltd Stop - Uptown - Lake St - Marshall Av
      </option>
      <option
        key="54"
        value="54"
      >
        54
         - 
        Ltd Stop - W 7 St - Airport - MOA - Maplewood Mall
      </option>
      <option
        key="59"
        value="59"
      >
        59
         - 
        Ltd Stop - Blaine - Hwy 65 - Central Av - Mpls
      </option>
      <option
        key="61"
        value="61"
      >
        61
         - 
        E Hennepin Av - Larpenteur Av - Arcade St
      </option>
      <option
        key="62"
        value="62"
      >
        62
         - 
        Shoreview - Little Canada - Rice St Signal Hills
      </option>
      <option
        key="63"
        value="63"
      >
        63
         - 
        Raymond Sta - Grand Av - Sunray - McKnight Rd
      </option>
      <option
        key="64"
        value="64"
      >
        64
         - 
        Payne - Maryland - White Bear Av - Maplewood Mall
      </option>
      <option
        key="65"
        value="65"
      >
        65
         - 
        Dale St - Co Rd B - Rosedale
      </option>
      <option
        key="67"
        value="67"
      >
        67
         - 
        W Minnehaha Av - Raymond Sta - Franklin Av
      </option>
      <option
        key="68"
        value="68"
      >
        68
         - 
        Jackson St - Robert St - W St Paul - Inver Hills
      </option>
      <option
        key="70"
        value="70"
      >
        70
         - 
        St Clair Av - W 7th St - Burns Av - Sunray
      </option>
      <option
        key="71"
        value="71"
      >
        71
         - 
        Little Canada - Westminster- Concord - Inver Hills
      </option>
      <option
        key="74"
        value="74"
      >
        74
         - 
        46th St - Randolph - W 7th St - E 7th St - Sunray
      </option>
      <option
        key="75"
        value="75"
      >
        75
         - 
        Stryker - Robert - Mendota Hts - Lake Cove Apts
      </option>
      <option
        key="80"
        value="80"
      >
        80
         - 
        Maplewood - White Bear Av - Sunray
      </option>
      <option
        key="83"
        value="83"
      >
        83
         - 
        HarMar Target - Lexington Av
      </option>
      <option
        key="84"
        value="84"
      >
        84
         - 
        Snelling - Highland Village - Sibley Plaza
      </option>
      <option
        key="87"
        value="87"
      >
        87
         - 
        Rosedale - U of M St Paul - Cleveland - Highland
      </option>
      <option
        key="94"
        value="94"
      >
        94
         - 
        Express - Mpls - St Paul
      </option>
      <option
        key="111"
        value="111"
      >
        111
         - 
        Ltd Stop - 66th St - Chicago - Cedar - U of M
      </option>
      <option
        key="113"
        value="113"
      >
        113
         - 
        Ltd Stop - Grand Av S - Lyndale Av S - U of M
      </option>
      <option
        key="114"
        value="114"
      >
        114
         - 
        Ltd Stop - Excelsior Blvd - Uptown - U of M
      </option>
      <option
        key="115"
        value="115"
      >
        115
         - 
        Ltd Stop - Grand Av S - Uptown - Hennepin - U of M
      </option>
      <option
        key="118"
        value="118"
      >
        118
         - 
        Ltd Stop - Central Av - Lowry Av - U of M
      </option>
      <option
        key="120"
        value="120"
      >
        120
         - 
        U of M - East Bank Circulator
      </option>
      <option
        key="121"
        value="121"
      >
        121
         - 
        U of M - Campus Connector
      </option>
      <option
        key="122"
        value="122"
      >
        122
         - 
        U of M - University Ave Circulator
      </option>
      <option
        key="123"
        value="123"
      >
        123
         - 
        U of M - 4th Street Circulator
      </option>
      <option
        key="124"
        value="124"
      >
        124
         - 
        U of M - Saint Paul Circulator
      </option>
      <option
        key="129"
        value="129"
      >
        129
         - 
        U of M - Huron Shuttle
      </option>
      <option
        key="133"
        value="133"
      >
        133
         - 
        Ltd Stop - Bloomington Av - Chicago Av - Mpls
      </option>
      <option
        key="134"
        value="134"
      >
        134
         - 
        Ltd Stop - Highland - Cleveland - Cretin - Mpls
      </option>
      <option
        key="135"
        value="135"
      >
        135
         - 
        Ltd Stop - Grand Av S - Mpls
      </option>
      <option
        key="141"
        value="141"
      >
        141
         - 
        Ltd Stop - New Brighton - Johnson St - Mpls
      </option>
      <option
        key="146"
        value="146"
      >
        146
         - 
        Ltd Stop - Vernon Av - 50th St - Mpls
      </option>
      <option
        key="156"
        value="156"
      >
        156
         - 
        Express - 58th St - 56th St - Diamond Lake - Mpls
      </option>
      <option
        key="219"
        value="219"
      >
        219
         - 
        Maplewood - Century Av - Hadley Av - Sunray
      </option>
      <option
        key="223"
        value="223"
      >
        223
         - 
        Rosedale - Little Canada - Maplewood
      </option>
      <option
        key="225"
        value="225"
      >
        225
         - 
        Deluxe - Roseville - Coventry - Rosedale
      </option>
      <option
        key="227"
        value="227"
      >
        227
         - 
        Target Shoreview - Victoria - Rosedale
      </option>
      <option
        key="250"
        value="250"
      >
        250
         - 
        Express - St Josephs P&amp;R - 95th Av P&amp;R - Mpls
      </option>
      <option
        key="252"
        value="252"
      >
        252
         - 
        Express - 95Av P&amp;R - U of M
      </option>
      <option
        key="261"
        value="261"
      >
        261
         - 
        Express - Shoreview - Roseville - Mpls
      </option>
      <option
        key="262"
        value="262"
      >
        262
         - 
        Ltd Stop - 95Av P&amp;R - Shoreview Rice - St Paul
      </option>
      <option
        key="263"
        value="263"
      >
        263
         - 
        Express - Hwy 36 Rice P&amp;R - Hwy 61 - Co Rd C -Mpls
      </option>
      <option
        key="264"
        value="264"
      >
        264
         - 
        Express - Roseville - Co Rd C P &amp; R - Mpls
      </option>
      <option
        key="265"
        value="265"
      >
        265
         - 
        Express - White Bear Lake - Maplewood - St Paul
      </option>
      <option
        key="270"
        value="270"
      >
        270
         - 
        Express - Mahtomedi - Maplewood - Minneapolis
      </option>
      <option
        key="272"
        value="272"
      >
        272
         - 
        Express - Maplewood - Roseville - U of M
      </option>
      <option
        key="275"
        value="275"
      >
        275
         - 
        Express - Forest Lake - Co Rd 14 P&amp;R - St Paul
      </option>
      <option
        key="288"
        value="288"
      >
        288
         - 
        Express - Forest Lake - Mpls
      </option>
      <option
        key="294"
        value="294"
      >
        294
         - 
        Express - Oakdale - Stillwater - St Paul
      </option>
      <option
        key="350"
        value="350"
      >
        350
         - 
        Ltd Stop - Sunray - McKnight - St Paul
      </option>
      <option
        key="351"
        value="351"
      >
        351
         - 
        Express - Woodbury - St Paul
      </option>
      <option
        key="353"
        value="353"
      >
        353
         - 
        Express - Woodbury - St Paul - Mpls
      </option>
      <option
        key="355"
        value="355"
      >
        355
         - 
        Express - Woodbury - Mpls
      </option>
      <option
        key="361"
        value="361"
      >
        361
         - 
        Express - Cottage Grove - St Paul
      </option>
      <option
        key="364"
        value="364"
      >
        364
         - 
        Express - Newport - Cottage Grove - St Paul
      </option>
      <option
        key="365"
        value="365"
      >
        365
         - 
        Express - Cottage Grove - Newport - Mpls
      </option>
      <option
        key="375"
        value="375"
      >
        375
         - 
        Express - Oakdale - Mpls
      </option>
      <option
        key="411"
        value="411"
      >
        411
         - 
        Mystic Lake-Marschall Rd Transit Sta
      </option>
      <option
        key="415"
        value="415"
      >
        415
         - 
        MOA - Mendota Heights - Eagan
      </option>
      <option
        key="417"
        value="417"
      >
        417
         - 
        Mendota Heights - St Paul
      </option>
      <option
        key="420"
        value="420"
      >
        420
         - 
        Rosemount - Apple Valley Flex
      </option>
      <option
        key="421"
        value="421"
      >
        421
         - 
        Burnsville - Savage Flex
      </option>
      <option
        key="426"
        value="426"
      >
        426
         - 
        Burnsville Shuttle
      </option>
      <option
        key="436"
        value="436"
      >
        436
         - 
        Eagan - Hwy 55 - Reverse Commuter
      </option>
      <option
        key="438"
        value="438"
      >
        438
         - 
        Eagan - Cliff Lake Flex
      </option>
      <option
        key="440"
        value="440"
      >
        440
         - 
        Apple Valley - Cedar Grove Transit Sta - VA Hosp
      </option>
      <option
        key="442"
        value="442"
      >
        442
         - 
        Burnsville Center - Apple Valley
      </option>
      <option
        key="444"
        value="444"
      >
        444
         - 
        Savage - Burnsville - Mall of America
      </option>
      <option
        key="445"
        value="445"
      >
        445
         - 
        Eagan - Cedar Grove Transit Sta
      </option>
      <option
        key="446"
        value="446"
      >
        446
         - 
        Eagan-46th St Sta
      </option>
      <option
        key="452"
        value="452"
      >
        452
         - 
        Express -Mendota Heights - West St Paul - Mpls
      </option>
      <option
        key="460"
        value="460"
      >
        460
         - 
        Express - Burnsville - Mpls
      </option>
      <option
        key="464"
        value="464"
      >
        464
         - 
        Express - Savage - Burnsville - Mpls
      </option>
      <option
        key="465"
        value="465"
      >
        465
         - 
        Express - Burnsville - Mpls - U of M
      </option>
      <option
        key="467"
        value="467"
      >
        467
         - 
        Express - Lakeville - Mpls
      </option>
      <option
        key="470"
        value="470"
      >
        470
         - 
        Express - Eagan - Mpls
      </option>
      <option
        key="472"
        value="472"
      >
        472
         - 
        Express - Eagan - Blackhawk P&amp;R - Mpls
      </option>
      <option
        key="475"
        value="475"
      >
        475
         - 
        Express - Apple Valley - Eagan - Mpls - U of M
      </option>
      <option
        key="476"
        value="476"
      >
        476
         - 
        Express - Palomino Hills P&amp;R - Mpls
      </option>
      <option
        key="477"
        value="477"
      >
        477
         - 
        Express - Lakeville - Apple Valley - Mpls
      </option>
      <option
        key="478"
        value="478"
      >
        478
         - 
        Express - Rosemount - Mpls
      </option>
      <option
        key="479"
        value="479"
      >
        479
         - 
        Express - 157th St Sta - Mpls
      </option>
      <option
        key="480"
        value="480"
      >
        480
         - 
        Express - Apple Valley - Burnsville - St Paul
      </option>
      <option
        key="484"
        value="484"
      >
        484
         - 
        Express - Rosemount - Eagan - St Paul
      </option>
      <option
        key="489"
        value="489"
      >
        489
         - 
        Express - St Paul - Eagan - Reverse Commuter
      </option>
      <option
        key="490"
        value="490"
      >
        490
         - 
        Express - Prior Lake - Shakopee - Mpls
      </option>
      <option
        key="491"
        value="491"
      >
        491
         - 
        Express - Shakopee - Mpls - Reverse Commuter
      </option>
      <option
        key="492"
        value="492"
      >
        492
         - 
        Express - Prior Lake -Mpls - Reverse Commuter
      </option>
      <option
        key="493"
        value="493"
      >
        493
         - 
        Express - Shakopee - Mpls
      </option>
      <option
        key="495"
        value="495"
      >
        495
         - 
        Shakopee - Mall of America
      </option>
      <option
        key="497"
        value="497"
      >
        497
         - 
        Shakopee - Marschall Rd Transit Sta
      </option>
      <option
        key="498"
        value="498"
      >
        498
         - 
        Marschall Rd - Golden Triangle - UnitedHealthcare
      </option>
      <option
        key="499"
        value="499"
      >
        499
         - 
        Shakopee - Southbridge Crossings P&amp;R
      </option>
      <option
        key="515"
        value="515"
      >
        515
         - 
        Southdale - 66th St - Bloomington Av - VA - MOA
      </option>
      <option
        key="535"
        value="535"
      >
        535
         - 
        Ltd Stop - South Bloomington - Richfield - Mpls
      </option>
      <option
        key="537"
        value="537"
      >
        537
         - 
        Valley West - Normandale Col - France - Southdale
      </option>
      <option
        key="538"
        value="538"
      >
        538
         - 
        Southdale - York Av - Southtown - 86th St - MOA
      </option>
      <option
        key="539"
        value="539"
      >
        539
         - 
        Southtown - Normandale -Valley West - 98th - MOA
      </option>
      <option
        key="540"
        value="540"
      >
        540
         - 
        Edina - Richfield - 77th St - MOA
      </option>
      <option
        key="542"
        value="542"
      >
        542
         - 
        84th St - 76th St - American Blvd - MOA
      </option>
      <option
        key="552"
        value="552"
      >
        552
         - 
        Express - 12th Av - Bloomington Av - Mpls
      </option>
      <option
        key="553"
        value="553"
      >
        553
         - 
        Express - Bloomington - Portland Av - Mpls
      </option>
      <option
        key="554"
        value="554"
      >
        554
         - 
        Express - Bloomington - Nicollet Av - Mpls
      </option>
      <option
        key="558"
        value="558"
      >
        558
         - 
        Express - Lyndale Av - Penn Av - 66th St - Mpls
      </option>
      <option
        key="578"
        value="578"
      >
        578
         - 
        Express - Edina - Southdale - Mpls
      </option>
      <option
        key="579"
        value="579"
      >
        579
         - 
        Express - Southdale - U of M
      </option>
      <option
        key="587"
        value="587"
      >
        587
         - 
        Express - Edina - Valley View -Vernon - Mpls
      </option>
      <option
        key="588"
        value="588"
      >
        588
         - 
        Express - Normandale Lake Offices - Mpls
      </option>
      <option
        key="589"
        value="589"
      >
        589
         - 
        Express - West Bloomington - Mpls
      </option>
      <option
        key="597"
        value="597"
      >
        597
         - 
        Express - West Bloomington - Mpls
      </option>
      <option
        key="600"
        value="600"
      >
        600
         - 
        SW Transit - Flex Route
      </option>
      <option
        key="602"
        value="602"
      >
        602
         - 
        SW Transit - Flex Route
      </option>
      <option
        key="604"
        value="604"
      >
        604
         - 
        Louisiana Av - Excelsior Blvd
      </option>
      <option
        key="612"
        value="612"
      >
        612
         - 
        Uptown - Excelsior Blvd-Hopkins - Hopkins - Opus
      </option>
      <option
        key="615"
        value="615"
      >
        615
         - 
        Ridgedale - Co Rd 73 - St Louis Park
      </option>
      <option
        key="643"
        value="643"
      >
        643
         - 
        Ltd Stop - Golden Hills Dr - Cedar Lake Rd - Mpls
      </option>
      <option
        key="645"
        value="645"
      >
        645
         - 
        Ltd Stop - Mound - Wayzata - Ridgedale - Mpls
      </option>
      <option
        key="652"
        value="652"
      >
        652
         - 
        Express - Plymouth Rd - Co Rd 73 P&amp;R - U of M
      </option>
      <option
        key="663"
        value="663"
      >
        663
         - 
        Express - Cedar Lake Rd - Mpls
      </option>
      <option
        key="664"
        value="664"
      >
        664
         - 
        Express - Hopkins - Excelsior Blvd - Mpls
      </option>
      <option
        key="667"
        value="667"
      >
        667
         - 
        Express - Minnetonka - St Louis Park - Mpls
      </option>
      <option
        key="668"
        value="668"
      >
        668
         - 
        Express - Hopkins - St Louis Park - Mpls
      </option>
      <option
        key="670"
        value="670"
      >
        670
         - 
        Express - Excelsior - Mpls
      </option>
      <option
        key="671"
        value="671"
      >
        671
         - 
        Express - Excelsior - Deephaven - Mpls
      </option>
      <option
        key="672"
        value="672"
      >
        672
         - 
        Express - Wayzata - Minnetonka - Mpls
      </option>
      <option
        key="673"
        value="673"
      >
        673
         - 
        Express - Co Rd 73 P&amp;R - Mpls
      </option>
      <option
        key="674"
        value="674"
      >
        674
         - 
        Express - Maple Plain -Orono - Wayzata - Mpls
      </option>
      <option
        key="677"
        value="677"
      >
        677
         - 
        Express- Mound - Orono - Plymouth Rd - Mpls
      </option>
      <option
        key="679"
        value="679"
      >
        679
         - 
        Express - Co Rd 73 - Mpls
      </option>
      <option
        key="690"
        value="690"
      >
        690
         - 
        SW Transit - Express - Eden Prairie - Mpls
      </option>
      <option
        key="695"
        value="695"
      >
        695
         - 
        SW Transit - Express - Chaska - Chanhassen - Mpls
      </option>
      <option
        key="697"
        value="697"
      >
        697
         - 
        SW Transit - Express - Carver - Chaska - Mpls
      </option>
      <option
        key="698"
        value="698"
      >
        698
         - 
        SW Transit - Express - Chaska - Chanhassen - Mpls
      </option>
      <option
        key="699"
        value="699"
      >
        699
         - 
        SW Transit - Express - Chanhassen - Mpls
      </option>
      <option
        key="705"
        value="705"
      >
        705
         - 
        Starlite - Winnetka Av - Louisiana Av Transit Ctr
      </option>
      <option
        key="716"
        value="716"
      >
        716
         - 
        Zane Av - 63rd Av - Crystal - Robbinsdale
      </option>
      <option
        key="717"
        value="717"
      >
        717
         - 
        Brooklyn Center - Robbinsdale - Plymouth
      </option>
      <option
        key="721"
        value="721"
      >
        721
         - 
        Ltd Stop - Brooklyn Center - Target Campus - Mpls
      </option>
      <option
        key="722"
        value="722"
      >
        722
         - 
        Brooklyn Ctr - Humboldt - Shingle Creek
      </option>
      <option
        key="723"
        value="723"
      >
        723
         - 
        Starlite - N Henn Comm College - Brooklyn Ctr
      </option>
      <option
        key="724"
        value="724"
      >
        724
         - 
        Ltd Stop - Target Campus - Starlite - Brooklyn Ctr
      </option>
      <option
        key="740"
        value="740"
      >
        740
         - 
        Plymouth - Fernbrook Ln - Xenium Ln
      </option>
      <option
        key="741"
        value="741"
      >
        741
         - 
        Plymouth - Annapolis - Campus Dr - Station 73
      </option>
      <option
        key="742"
        value="742"
      >
        742
         - 
        Plymouth - Express - Bass Lake Rd
      </option>
      <option
        key="747"
        value="747"
      >
        747
         - 
        Plymouth - Express - Station 73 - Mpls
      </option>
      <option
        key="755"
        value="755"
      >
        755
         - 
        Ltd Stop - Hwy 55 - Golden Valley Rd - Winnetka Av
      </option>
      <option
        key="756"
        value="756"
      >
        756
         - 
        Express- Hwy 55 - Mendelssohn Rd - Boone - Mpls
      </option>
      <option
        key="758"
        value="758"
      >
        758
         - 
        Express - Douglas - MnDot P&amp;R - Noble - Mpls
      </option>
      <option
        key="760"
        value="760"
      >
        760
         - 
        Express - Zane Av - 63rd Av - 65th Av P&amp;R - Mpls
      </option>
      <option
        key="761"
        value="761"
      >
        761
         - 
        Express - Brooklyn Park - Xerxes - 49th Av - Mpls
      </option>
      <option
        key="762"
        value="762"
      >
        762
         - 
        Ltd Stop - Brooklyn Ctr - Humboldt Av - Mpls
      </option>
      <option
        key="763"
        value="763"
      >
        763
         - 
        Express - 85th Av - Brookdale Dr - Humboldt - Mpls
      </option>
      <option
        key="764"
        value="764"
      >
        764
         - 
        Express - Winnetka Av - 42nd Av - Mpls
      </option>
      <option
        key="765"
        value="765"
      >
        765
         - 
        Express - Target - Hwy 252 and 73rd Av P&amp;R - Mpls
      </option>
      <option
        key="766"
        value="766"
      >
        766
         - 
        Express - Anoka - Champlin - W River Rd - Mpls
      </option>
      <option
        key="767"
        value="767"
      >
        767
         - 
        Express - 63rd Av P&amp;R - 65th Av P&amp;R - Mpls
      </option>
      <option
        key="768"
        value="768"
      >
        768
         - 
        Express - Noble P&amp;R - Mpls
      </option>
      <option
        key="771"
        value="771"
      >
        771
         - 
        Plymouth - Shuttle - SW Plymouth - Station 73
      </option>
      <option
        key="772"
        value="772"
      >
        772
         - 
        Plymouth - Express - Station 73
      </option>
      <option
        key="774"
        value="774"
      >
        774
         - 
        Plymouth - Express - Station 73
      </option>
      <option
        key="776"
        value="776"
      >
        776
         - 
        Plymouth - Express - Southwest Plymouth
      </option>
      <option
        key="777"
        value="777"
      >
        777
         - 
        Plymouth - Express - NW Plymouth - Station 73
      </option>
      <option
        key="780"
        value="780"
      >
        780
         - 
        Maple Grove - Express - Shepherd of the Grove P&amp;R
      </option>
      <option
        key="781"
        value="781"
      >
        781
         - 
        Maple Grove - Express - Maple Grove Station
      </option>
      <option
        key="782"
        value="782"
      >
        782
         - 
        Maple Grove - Express - Zachary and 96th Av P&amp;R
      </option>
      <option
        key="783"
        value="783"
      >
        783
         - 
        Maple Grove - Express - Crosswinds Church P&amp;R
      </option>
      <option
        key="785"
        value="785"
      >
        785
         - 
        Maple Grove - Express - Parkway Station
      </option>
      <option
        key="787"
        value="787"
      >
        787
         - 
        Maple Grove - Midday Shuttle - Flex Route
      </option>
      <option
        key="788"
        value="788"
      >
        788
         - 
        Maple Grove - Bass Lake Rd - Crosswinds Church P&amp;R
      </option>
      <option
        key="789"
        value="789"
      >
        789
         - 
        Maple Grove - Express - Maple Grove Sta - U of M
      </option>
      <option
        key="790"
        value="790"
      >
        790
         - 
        Plymouth - Express - Cub Foods - Four Seasons
      </option>
      <option
        key="791"
        value="791"
      >
        791
         - 
        Plymouth - Shuttle - Larch Ln - Four Seasons
      </option>
      <option
        key="793"
        value="793"
      >
        793
         - 
        Plymouth - Express - Cub Foods - Four Seasons
      </option>
      <option
        key="795"
        value="795"
      >
        795
         - 
        Plymouth - Express - Midday - Northeast Plymouth
      </option>
      <option
        key="801"
        value="801"
      >
        801
         - 
        Brooklyn Ctr - Columbia Heights - Rosedale
      </option>
      <option
        key="805"
        value="805"
      >
        805
         - 
        Anoka Traveler - Anoka - Coon Rapids - Northtown
      </option>
      <option
        key="824"
        value="824"
      >
        824
         - 
        Ltd Stop - Northtown - Monroe - University - Mpls
      </option>
      <option
        key="825"
        value="825"
      >
        825
         - 
        Ltd Stop - Northtown - St. Anthony - Mpls
      </option>
      <option
        key="831"
        value="831"
      >
        831
         - 
        Anoka Traveler - 117th Av - Polk - Northtown
      </option>
      <option
        key="850"
        value="850"
      >
        850
         - 
        Express - Riverdale P&amp;R - Foley P&amp;R - Mpls
      </option>
      <option
        key="852"
        value="852"
      >
        852
         - 
        Express - Anoka - Coon Rapids - Northtown - Mpls
      </option>
      <option
        key="854"
        value="854"
      >
        854
         - 
        Express - Paul Pkwy - Northdale - Northtown - Mpls
      </option>
      <option
        key="860"
        value="860"
      >
        860
         - 
        Express - Coon Rapids - Northtown - St Paul
      </option>
      <option
        key="865"
        value="865"
      >
        865
         - 
        Express - Paul Pkwy P&amp;R - Blaine - Mpls
      </option>
      <option
        key="887"
        value="887"
      >
        887
         - 
        Northstar Link - St Cloud Link
      </option>
    </FormControl>
  </FormGroup>
</Form>
`;
